[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/battleMode/catchMiniGame.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/battleMode/catchTester.gd" type="Script" id=2]
[ext_resource path="res://scenes/battleMode/windWatchMinigame.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/battleMode/comboMiniGame.tscn" type="PackedScene" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="catchMiniGame" parent="." instance=ExtResource( 1 )]

[node name="windWatchMiniGame" parent="." instance=ExtResource( 3 )]
position = Vector2( 127, 94 )

[node name="comboMiniGame" parent="." instance=ExtResource( 4 )]
position = Vector2( 69, 84 )
